--- a/project-balloons/SASS/components/_tour-card.sass
+++ b/project-balloons/SASS/components/_tour-card.sass
@@ -1,6 +1,5 @@
 
 .card-tour
-    // background: red
     position: relative
     height: 50rem
     perspective: 250rem
@@ -13,13 +12,17 @@
         top: 0
         left: 0
         width: 100%
-        backface-visibility: hidden
+        backface-visibility: hidden       // делает невидммым заднюю сторону карточки
         box-shadow: $box-shadow
+        border-radius: 3px
+        overflow: hidden
         &_front
             // background: yellow
         &_back
+            overflow: hidden
+            border-radius: 3px
             transform: rotateY(180deg) // по умолчанию добавлен переворот на 180 по игрек оси
-            background: linear-gradient(120deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%)
+            background: linear-gradient(120deg, $color-brown-light, $color-brown-dark)
     &:hover &__side_front
         transform: rotateY(-180deg)
     &:hover &__side_back
@@ -27,8 +30,13 @@
     &__img
         background-blend-mode: hard-light // ддобавляет наложение слоя хард лайт
         height: 21rem
-        background: $color-brown-light url(../img/tours_card_1.jpg) center/cover no-repeat
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+        &_1
+            background: $color-brown-light url(../img/tours_card_1.jpg) center/cover no-repeat
+        &_2
+            background: $color-brown-light url(../img/tours_card_2.jpg) center/cover no-repeat
+        &_3
+            background: $color-brown-light url(../img/tours_card_3.jpg) center/cover no-repeat
     &__title
         font-size: 2.8rem
         letter-spacing: .2rem
@@ -54,11 +62,31 @@
             list-style: none
             margin: 0 auto
             width: 80%
+            text-align: center
             li
                 font-size: $font-size-paraagraph
                 letter-spacing: .2rem
                 color: $color-gray
                 border-bottom: 1px solid $color-gray
-                text-align: center
+                display: inline-block
                 &:not(:last-child)
                     margin-bottom: 2rem
+
+    &__backSide-box
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+    &__text
+        color: $color-white
+        margin-bottom: 8rem
+        letter-spacing: .2rem
+        text-transform: uppercase
+        text-align: center 
+        &_1
+            font-size: $font-size-paraagraph
+            font-weight: 300
+            
+        &_2
+           font-size: 6rem
+           font-weight: 500 
