--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -278,10 +278,14 @@ body {
   width: 100%;
   backface-visibility: hidden;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  overflow: hidden;
 }
 .card-tour__side_back {
+  overflow: hidden;
+  border-radius: 3px;
   transform: rotateY(180deg);
-  background: linear-gradient(120deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+  background: linear-gradient(120deg, #BA8554, #A14F03);
 }
 .card-tour:hover .card-tour__side_front {
   transform: rotateY(-180deg);
@@ -292,9 +296,17 @@ body {
 .card-tour__img {
   background-blend-mode: hard-light;
   height: 21rem;
-  background: #BA8554 url(../img/tours_card_1.jpg) center/cover no-repeat;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+.card-tour__img_1 {
+  background: #BA8554 url(../img/tours_card_1.jpg) center/cover no-repeat;
+}
+.card-tour__img_2 {
+  background: #BA8554 url(../img/tours_card_2.jpg) center/cover no-repeat;
+}
+.card-tour__img_3 {
+  background: #BA8554 url(../img/tours_card_3.jpg) center/cover no-repeat;
 }
 .card-tour__title {
   font-size: 2.8rem;
@@ -322,16 +334,38 @@ body {
   list-style: none;
   margin: 0 auto;
   width: 80%;
+  text-align: center;
 }
 .card-tour__descr ul li {
   font-size: 1.6rem;
   letter-spacing: 0.2rem;
   color: #777777;
   border-bottom: 1px solid #777777;
-  text-align: center;
+  display: inline-block;
 }
 .card-tour__descr ul li:not(:last-child) {
   margin-bottom: 2rem;
+}
+.card-tour__backSide-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card-tour__text {
+  color: #ffffff;
+  margin-bottom: 8rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  text-align: center;
+}
+.card-tour__text_1 {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+.card-tour__text_2 {
+  font-size: 6rem;
+  font-weight: 500;
 }
 
 .header {
